stylus/app.styl
// svgerber stylesheet
// uses jeet
@import 'jeet'
edit()

// mobile breakpoint
BP_1 = 43em
BP_2 = 31em

// fontstants
SIZE = 16
LINE = 1.2

// top bottom and left right margin and padding mixins
margin-tb(n)
  margin-top n
  margin-bottom n
margin-lr(n)
  margin-left n
  margin-right n
// top bottom margin mixin
padding-tb(n)
  padding-top n
  padding-bottom n

// defaults and pagewide styling
body
  font-family sans-serif
  font-size SIZE
  line-height LINE
  text-align center
  padding 0
  margin 0

h1, h2, h3, h4, h5, h6, p
  margin-tb 0.5em

.List-unstyled
  padding 0
  margin 0
  list-style none

// buttons
.Btn
  font-family sans-serif
  text-align center
  border-style solid
  border-width 1px
  border-radius 3px
  border-color slategrey
  padding 0.5em 1em 0.5em 1em
  margin 0.25em
  font-size 16px
  width 10em

.Btn-lg
  font-size 18px
  width 80%
  max-width 16em

// general spacing
.Container
  col(.95)
  shift(.025)
  margin-tb 1em

// main nav
navHt = 3em
navLinkHt = 1.5em
navLinkPad = ( navHt - navLinkHt )/( 2 * navLinkHt )

#main-nav
  text-align center
  height navHt
  margin-bottom 1em

.Nav-list
  height 100%
  li
    position relative
    height 100%
    span(1/5)

.Nav--link
  width 100%
  font-size navLinkHt
  padding-top navLinkPad
  padding-bottom navLinkPad
  span
    +below(BP_1)
      display none
// end main nav

// CONTENT

// top row
#information
  col(1/3)
  shift(1/3)
  +below(BP_1)
    unshift()
    stack()

#caution
  col(1/3)
  shift(-1/3)
  +below(BP_1)
    unshift()
    stack()
  ul
    text-align left

#sample
  col(1/3)
  +below(BP_1)
    stack()
// end top row

// file upload
#dropzone
  border-width 2px
  border-style dashed
  border-color slategrey
  border-radius 1em
  margin-bottom 1em
  input
    display none
  label
    font-style sans
  position relative
  height 20em
  .Container
    align()

.DropzoneContents
  margin-tb 0.5em
  stack()

.Dropzone--btn
  display inline-block
  width auto
  height auto
  padding 0.5em 1em 0.5em 1em
// end file upload


// uploaded file list
#file-list
  center(56em)

.UploadList--item
  margin-tb 1em

.UploadList--filename
  float left
  font-size 1.75em
  text-align left

.UploadList--select
  float right

.UploadList--text
  line-height LINE

span.UploadList--text
  margin-lr 0.5em
  font-size 1.75em

select.UploadList--text
  font-size 1em
  height 1.75em * LINE
  margin 0
  border-width 0
  border-radius 0
  vertical-align top
// end uploaded file list

// board output
#board-output
  col(.8)
  shift(.1)

.BoardContainer
  col(.5)
  +below(BP_2)
    col()

.LayerContainer
  col(1/4)
  +below(BP_2)
    col(1/2)

.LayerImage
  width 100%
// end board output

// layer output


// end layer output


// footer
.Foot--links
  align()
  a
    margin 1em
// end footer


// // body padding for fixed navbar
// body
//   padding-top 50px
//
// // disable top navbar collapse
// #top-nav
//   .navbar-collapse.collapse
//     display block !important
//
//   .navbar-nav
//     li, .navbar-nav
//       float left !important
//
//   .navbar-nav.navbar-right:last-child
//     margin-right -15px !important
//
//   .navbar-right
//     float right !important
//
// #dropzone
//   margin-top 25px
//   margin-bottom 25px
//   padding-top 100px
//   padding-bottom 100px
//   text-align center
//   border thin dashed black
//   border-radius 10px
//
// #file-upload-select
//   display none
//
// #filelist
//   .upload-list-item
//     margin-top 10px
//     margin-bottom 10px
//
//   .mega-octicon
//     height 44px
//     margin-top 5px
//     text-align right
//
//   .filename-text
//     margin-top 5px
//     margin-bottom 0
//     font-size 24px
//
//   .layer-type
//     height 44px
//   .layer-type-text
//     font-size 18px
//     line-height 1.1
//   .layer-type-select
//     font-size 16px
//     height 22px
//     color whitesmoke
//     background slategrey
//     width 100%
//     border 0
//     border-radius 0
//
// // all buttons get some margin
// .btn
//   margin-top 10px
//   margin-bottom 10px
//
// #individual-layer-output
//   padding-top 10px
//   padding-bottom 10px
//   text-align center
//
// .layer-container
//   margin-top 20px
//   margin-bottom 20px
//   text-align center
//
// .layer-drawing
//   svg
//     overflow visible
//
// // .js-template
// //   display none
//
// footer
//   text-align center
//   margin-top 50px

